# TDE

./: Cargo.toml  README.md
src/: app.rs  input.rs  layout.rs  main.rs  pty.rs  vfs.rs
src/gui/: compositor.rs  mod.rs  window.rs
